   Overlay.Rotation.
 - Added DrawingSurface.BlendImage() and DrawingSurface.BlendSurface() functions.
 - AudioChannel.Position and PositionMs no longer return a very large value while skipping
   cutscene.

Engine:
 - Animated buttons now display flipped frames correctly.
 - (possibly) Fixed characters sometimes keep walking animation for a short time after arriving
   to their destination.


===================================================================================================

VERSION 3.6.0, April 2023

Common features:
 - Full Unicode support for all game texts: game properties, scripts, translations, input.
   ASCII/ANSI mode is still working, for backwards compatibility. This may be configured
   in the game project.
 - Extended sprite compression options: lossless storage optimization for 16- and 32-bit
   sprites; LZW compression option for sprites in addition to existing RLE compression.
 - GUI controls may now be told to clip their contents, which means that nothing gets drawn outside
   of their borders (as defined by X, Y, Width, Height properties). The only exception is Sliders,
   which are more complicated.
 - The historical TTF fonts' "fixup" that altered their height and vertical offset is now
   optional and works only if backwards compatible option is set.
 - Max number of AudioChannels is now 16 (was 8).
 - Removed game Cursors hard limit (was 20).
 - Increased Room Objects limit to 256 (was 40).
 - Discontinued "Windows Game Explorer" support in both Editor and Engine.

Editor:
 - Editor requires .NET Framework 4.6 to run.
 - Added Android build target support (requires "Android component" installed).
 - Added Web/Emscripten build target support (requires "Web build component" installed).
 - Expanded UI color theme format, support global color options and allow missing entries.
 - Script editor works in unicode mode.
 - Added "Text format" option in General Settings which lets switching between ASCII/ANSI and