@@ -29,7 +29,8 @@ enum AudioFileType {
     eAudioFileWAV = 3,
     eAudioFileVOC = 4,
     eAudioFileMIDI = 5,
-    eAudioFileMOD = 6
+    eAudioFileMOD = 6,
+    eAudioFileFLAC = 7
 };
 
 #define AUCL_BUNDLE_EXE 1
