@@ -61,6 +61,7 @@ Engine:
  - Animated buttons now display flipped frames correctly.
  - (possibly) Fixed characters sometimes keep walking animation for a short time after arriving
    to their destination.
+ - Added FLAC support for music, speech and sound effects.
 
 
 ===================================================================================================
